@@ -1,3 +1,13 @@
+2013-02-18  Alexey Proskuryakov  <ap@apple.com>
+
+        [WK2] Cannot load documents with blob urls
+        https://bugs.webkit.org/show_bug.cgi?id=110160
+
+        Reviewed by Sam Weinig.
+
+        * WebProcess/WebPage/WebPage.cpp: (WebKit::WebPage::canHandleRequest):
+        Added knowledge about blobs.
+
 2013-02-19  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK] Move the API to get TLS certificate from WebKitURIResponse to WebKitWebView
